// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add member tests Member Role Tests Adds a member role to the database and then deletes it 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "My Desc",
  "isPublic": true,
  "name": {
    "en": "en name",
    "fi": "fi name",
  },
  "permissions": [
    "aircraft.admin",
    "booking.admin",
  ],
  "roleId": "TEST_ROLE",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db add member tests add member and update member 1`] = `
{
  "billingId": "MEMBER",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "member",
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db add member tests add member and update member 2`] = `
{
  "billingId": "MEMBER",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test2",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "member",
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db query member tests getMemberByEmail should return member data for a valid email address 1`] = `
{
  "billingId": "BILL005",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Pekka",
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneNumber": "0441098765",
  "isTrainingProgramPilot": false,
  "lastName": "Hämäläinen",
  "memberId": "Pekka1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMemberById should return member data for a valid id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`Db query member tests getMemberById should return member data for a valid member id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`Db query member tests getMemberRolesByMemberId should return roles for given valid member 1`] = `
[
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "Instructor with permissions to manage training",
    "isPublic": true,
    "name": {
      "en": "Instructor",
      "fi": "Lennonopettaja",
    },
    "permissions": [],
    "roleId": "INSTRUCTOR",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with basic access",
    "isPublic": true,
    "name": {
      "en": "Member",
      "fi": "Jäsen",
    },
    "permissions": [
      "member",
    ],
    "roleId": "MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 1`] = `
[
  {
    "memberId": "k1mnimda",
    "name": "MIK Admin",
    "phoneNumber": null,
    "roles": [
      "ADMIN",
    ],
  },
  {
    "memberId": "Pekka1",
    "name": "Pekka Hämäläinen",
    "phoneNumber": "0445678901",
    "roles": [
      "ADMIN",
      "MEMBER",
    ],
  },
  {
    "memberId": "Antti1",
    "name": "Antti Heikkinen",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "memberId": "Liisa1",
    "name": "Liisa Korhonen",
    "phoneNumber": "0412345678",
    "roles": [
      "ADMIN",
      "COMMITTEE",
    ],
  },
  {
    "memberId": "Sanna1",
    "name": "Sanna Koskinen",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": "Kaisa1",
    "name": "Kaisa Laine",
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "memberId": "Anna1",
    "name": "Anna Mäkinen",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": "Jukka1",
    "name": "Jukka Nieminen",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "memberId": "Marja1",
    "name": "Marja Salminen",
    "phoneNumber": "0490123456",
    "roles": [],
  },
  {
    "memberId": "Juha1",
    "name": "Juha Seppälä",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 2`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "Administrator with full access",
  "isPublic": false,
  "name": {
    "en": "Administrator",
    "fi": "Ylläpitäjä",
  },
  "permissions": [
    "member.admin",
    "flightlog.admin",
    "booking.admin",
    "aircraft.admin",
  ],
  "roleId": "ADMIN",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMembers should return only approved members for valid members 1`] = `
[
  {
    "memberId": "Pekka1",
    "name": "Pekka Hämäläinen",
    "phoneNumber": "0445678901",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "memberId": "Antti1",
    "name": "Antti Heikkinen",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "memberId": "Liisa1",
    "name": "Liisa Korhonen",
    "phoneNumber": "0412345678",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": "Sanna1",
    "name": "Sanna Koskinen",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": "Anna1",
    "name": "Anna Mäkinen",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": "Jukka1",
    "name": "Jukka Nieminen",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "memberId": "Juha1",
    "name": "Juha Seppälä",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "memberId": "Matti1",
    "name": "Matti Virtanen",
    "phoneNumber": "0401234567",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
]
`;
